--- a/assets/css/chat.css
+++ b/assets/css/chat.css
@@ -174,22 +174,24 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   content: '';
-  display: block;
-  width: 3px;
-  height: 3px;
+  /*display: block;
+  width: 30px;
+  height: 30px;*/
   border-radius: 50%;
   background: rgba(255, 255, 255, .5);
   z-index: 2;
   margin-top: 4px;
-  animation: ball 0.45s cubic-bezier(0, 0, 0.15, 1) alternate infinite;
+  /*animation: ball 0.45s cubic-bezier(0, 0, 0.15, 1) alternate infinite;*/
   border: none;
   animation-delay: 0.15s;
 }
 .messages .message.loading span {
   display: block;
   font-size: 50px;
-  width: 20px;
-  height: 10px;
+  margin-left: 10px;
+  margin-top: 30px;
+  width: 100px;
+  height: 70px;
   position: relative;
 }
 .messages .message.loading span::before {
@@ -198,14 +200,14 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   content: '';
-  display: block;
-  width: 3px;
-  height: 3px;
+  /*display: block;
+  width: 30px;
+  height: 30px;*/
   border-radius: 50%;
   background: rgba(255, 255, 255, .5);
   z-index: 2;
   margin-top: 4px;
-  animation: ball 0.45s cubic-bezier(0, 0, 0.15, 1) alternate infinite;
+  /*animation: ball 0.45s cubic-bezier(0, 0, 0.15, 1) alternate infinite;*/
   margin-left: -7px;
 }
 .messages .message.loading span::after {
@@ -214,14 +216,14 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   content: '';
-  display: block;
-  width: 3px;
-  height: 3px;
+  /*display: block;
+  width: 30px;
+  height: 30px;*/
   border-radius: 50%;
   background: rgba(255, 255, 255, .5);
   z-index: 2;
   margin-top: 4px;
-  animation: ball 0.45s cubic-bezier(0, 0, 0.15, 1) alternate infinite;
+  /*animation: ball 0.45s cubic-bezier(0, 0, 0.15, 1) alternate infinite;*/
   margin-left: 7px;
   animation-delay: 0.3s;
 }
@@ -261,7 +263,7 @@ body {
   color: #fff;
   border: none;
   background: #248a52;
-  font-size: 10px;
+  font-size: 40px;
   text-transform: uppercase;
   line-height: 1;
   padding: 6px 10px;
