--- a/assets/css/chat.css
+++ b/assets/css/chat.css
@@ -18,6 +18,13 @@ body {
   line-height: 1.3;
   overflow: hidden;
 }
+
+.button1, .button2 {
+    font-size: 20px;
+    color: white;
+    padding: 10px, 10px, 10px, 10px;
+}
+
 .bg {
   width: 100%;
   height: 100%;
@@ -54,27 +61,28 @@ body {
   color: #fff;
   text-transform: uppercase;
   text-align: left;
-  padding: 10px 10px 10px 50px;
+  padding: 50px 10px 10px 50px;
 }
 .chat-title h1, .chat-title h2 {
   font-weight: normal;
-  font-size: 10px;
-  margin: 0;
+  font-size: 40px;
   padding: 0;
 }
 .chat-title h2 {
   color: rgba(255, 255, 255, .5);
-  font-size: 8px;
+  font-size: 30px;
   letter-spacing: 1px;
 }
+
+/*
 .chat-title .avatar {
   position: absolute;
   z-index: 1;
   top: 8px;
   left: 9px;
   border-radius: 30px;
-  width: 30px;
-  height: 30px;
+  width: 80px;
+  height: 80px;
   overflow: hidden;
   margin: 0;
   padding: 0;
@@ -84,6 +92,7 @@ body {
   width: 100%;
   height: auto;
 }
+*/
 /*--------------------
  Messages
  --------------------*/
@@ -128,7 +137,7 @@ body {
   left: 0;
   border-right: 7px solid transparent;
 }
-.messages .message .avatar {
+/*.messages .message .avatar {
   position: absolute;
   z-index: 1;
   bottom: -15px;
@@ -144,7 +153,7 @@ body {
 .messages .message .avatar img {
   width: 100%;
   height: auto;
-}
+}*/
 .messages .message.message-personal {
   float: right;
   color: #fff;
